--- a/index.html
+++ b/index.html
@@ -1765,7 +1765,7 @@
                         card_count.self_mill.push(d);
                     }
                     if (text_temp.includes('mill') || text_temp.includes('exiled cards with total mana value')) {
-                        card_count.libra.push(d);
+                        card_count.library_out.push(d);
                     }
                     if ((type_temp.includes('instant') && text_temp.includes('prevent all'))
                         || text_temp.includes('your life total can\'t change')
